# workshop-aberto-dw-do-zero

./: .user.yml  README.md  exemplo.env  pyproject.toml
dwhprojeto/: .user.yml  dbt_project.yml  profiles.yml
dwhprojeto/models/: schema.yml
dwhprojeto/models/staging/: schemel.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
src/: extract_load.py
